[package]
name = "terra-link"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["tokio", "quic", "kad", "macros", "identify", "tcp", "noise", "yamux", "gossipsub", "autonat", "relay", "dcutr"] }
libp2p-gossipsub = "0.49.2"
maxminddb = "0.27.3"
prost = "0.14.3"
rand = "0.8"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
prost-build = "0.14.3"
